---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10942                                -
---------------------------------------------
- 2021-07-07                                -
---------------------------------------------
.: WSM: Task - FAQ (WSM-391)

- v1.0.10941                                -
---------------------------------------------
- 2021-07-04                                -
---------------------------------------------
.: WSM: Task - Allow longer text in subitems (WSM-411)

---------------------------------------------
- 2021-07-02                                -
---------------------------------------------
.: WSM: Task - Able to add subitems in invoice (WSM-403)

---------------------------------------------
- 2021-07-01                                -
---------------------------------------------
.: WSM: Task - Disabled discount (WSM-394)

---------------------------------------------
- 2021-06-30                                -
---------------------------------------------
.: WSM: BugFix - Profile image is not shown when store has no image in notification (WSW-124)
.: WSM: BugFix - Only allow to input number for subitem price (WSM-394)

---------------------------------------------
- 2021-06-28                                -
---------------------------------------------
.: WSM: Task - Create a product template which is based on the product template to create the item (WSM-394)

- v1.0.1094                                 -
---------------------------------------------
- 2021-06-20                                -
---------------------------------------------
.: WSM: Task - Update to use long polling to get notification (WSM-358)

---------------------------------------------
- 2021-06-14                                -
---------------------------------------------
.: WSM: Task - Notification (WSM-358)
