@@ -141,7 +141,7 @@
                         <div class="row no-gutters">
                             <div class="col-lg-6 pr-lg-1">
                                 <label id="recipientName" class="mb-0 font-9">Recipient's Name: </label>
-                                <input for="recipientName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="recipientName" />
+                                <input #recipientName for="recipientName" class="form-control form-control-sm mb-2" maxlength="36" formControlName="recipientName" />
                             </div>
                         </div>
                         <div class="row no-gutters">
