@@ -254,7 +254,7 @@
             <span class="fas fa-times" [routerLink]="[]" [queryParams]="{modal: null}"></span>
           </div>
           <h3 class="h5 mb-0">Business Hour:</h3>
-          <business-timetable [(timetable)]="timetable"></business-timetable>
+          <business-timetable class="font-9" [(timetable)]="timetable"></business-timetable>
           <div class="row no-gutters mt-2">
             <button class="btn btn-sm btn-controller" type="button" (click)="phase.previous()">Previous</button>
             <!-- [disabled]="!openingInfoFormGroup.valid" -->
