@@ -4,6 +4,11 @@
 
 - v1.0.10942                                -
 ---------------------------------------------
+- 2021-07-08                                -
+---------------------------------------------
+.: WSM: BugFix - Update sales analysis with subitems update (WSM-408)
+
+---------------------------------------------
 - 2021-07-07                                -
 ---------------------------------------------
 .: WSM: Task - FAQ (WSM-391)
